[BEAM-2530] Add Java 9 profile to fix javadoc, google-value and findbugs issues