@@ -339,6 +339,34 @@
     </profile>
 
     <profile>
+      <id>java9</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <properties>
+        <!-- Disable until findbugs supports Java 9 -->
+        <findbugs.skip>true</findbugs.skip>
+        <!-- Disable because google.auto produces a warning on compilation
+          with Java 9. https://github.com/google/auto/issues/503 -->
+        <compiler.error.flag></compiler.error.flag>
+        <!-- Disable failOnError for javadoc until the issue with the classpath
+          and @Nullable is resolved -->
+        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <configuration>
+              <additionalparam>--add-modules ALL-SYSTEM</additionalparam>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
       <id>eclipse-jdt</id>
       <properties>
         <!-- Tycho doesn't support -Werror -->
